@@ -985,7 +985,7 @@ class ReadCDF(CDFTests):
         self.assertEqual(expectedNames, names)
 
     def testGetVarNum(self):
-        self.assertEqual(0, self.cdf['ATC']._num())
+        self.assertEqual(0, self.cdf['ATC']._num)
 
     def testCDFIterator(self):
         expected = self.varnames
@@ -2082,25 +2082,28 @@ class ChangeCDF(ChangeCDFBase):
         else:
             self.fail('Should have raised CDFError')
 
-    @unittest.expectedFailure
     def testRenameSameVar(self):
         """Rename a variable while keeping a reference to it"""
         zvar = self.cdf['PhysRecNo']
         self.cdf['PhysRecNo'].rename('foobar')
+        #This works because the reference is by var num not name
         numpy.testing.assert_array_equal(
             zvar[...], self.cdf['foobar'][...])
 
     def testDeleteSameName(self):
         """Delete a variable and re-make with same name"""
         zvar = self.cdf['PhysRecNo']
-        number = zvar._num()
+        number = zvar._num
         del self.cdf['PhysRecNo']
         self.cdf['PhysRecNo'] = [1, 2, 3, 4]
-        #Verify we have different record numbers between two things
+        #Verify we have different variable numbers between two things
         #with the same name
-        self.assertNotEqual(number, self.cdf['PhysRecNo']._num())
-        numpy.testing.assert_array_equal(
-            zvar[...], self.cdf['PhysRecNo'][...])
+        self.assertNotEqual(number, self.cdf['PhysRecNo']._num)
+        #And since they're referring to different numbers, the
+        #variables will be different
+        #https://stackoverflow.com/questions/38506044/numpy-testing-assert-array-not-equal
+        self.assertRaises(AssertionError, numpy.testing.assert_array_equal,
+                          zvar[...], self.cdf['PhysRecNo'][...])
 
     def testNewVar(self):
         """Create a new variable"""
@@ -2722,13 +2725,13 @@ class ChangeAttr(ChangeCDFBase):
         self.assertEqual('foobar', zvar.attrs['DEPEND_0'])
         self.assertEqual(const.CDF_CHAR.value,
                          cdf.zAttr(self.cdf,
-                                   'DEPEND_0').type(zvar._num()))
+                                   'DEPEND_0').type(zvar._num))
 
         zvar.attrs['FILLVAL'] = [0, 1]
         numpy.testing.assert_array_equal([0,1], zvar.attrs['FILLVAL'])
         self.assertEqual(const.CDF_INT4.value,
                          cdf.zAttr(self.cdf,
-                                   'FILLVAL').type(zvar._num()))
+                                   'FILLVAL').type(zvar._num))
 
         message = 'Entry strings must be scalar.'
         try:
@@ -2756,20 +2759,20 @@ class ChangeAttr(ChangeCDFBase):
         self.assertEqual(1, zvar.attrs['NEW_ATTRIBUTE'])
         self.assertEqual(const.CDF_INT4.value,
                          cdf.zAttr(self.cdf,
-                                   'NEW_ATTRIBUTE').type(zvar._num()))
+                                   'NEW_ATTRIBUTE').type(zvar._num))
 
         zvar.attrs['NEW_ATTRIBUTE2'] = [1, 2]
         numpy.testing.assert_array_equal([1, 2], zvar.attrs['NEW_ATTRIBUTE2'])
         self.assertEqual(const.CDF_INT4.value,
                          cdf.zAttr(self.cdf,
-                                   'NEW_ATTRIBUTE2').type(zvar._num()))
+                                   'NEW_ATTRIBUTE2').type(zvar._num))
 
         zvar = self.cdf['SpinNumbers']
         zvar.attrs['NEW_ATTRIBUTE3'] = 1
         self.assertEqual(1, zvar.attrs['NEW_ATTRIBUTE3'])
         self.assertEqual(const.CDF_BYTE.value,
                          cdf.zAttr(self.cdf,
-                                   'NEW_ATTRIBUTE3').type(zvar._num()))
+                                   'NEW_ATTRIBUTE3').type(zvar._num))
 
     def testDelzAttr(self):
         """Delete a zEntry"""
