@@ -12,6 +12,9 @@ pycdf
  - Reading empty NRV variables will now return empty array (not padding)
  - Fix more cases of BAD_ENTRY_NUM when reading attribute entries
  - Fix UTC-to-TT2000 conversions on ARM (thanks Rodrigue Piberne for the bug)
+ - Speed up many operations by referencing variables by number instead of
+   name. This is the biggest change to pycdf internals in several years; please
+   report any bugs.
 
 Changes in Version 0.1.6 (2016-09-08)
 =====================================
